Bug 532936 - Add root level node for bookmarks synced from Fennec Create a mobile root in Firefox and link it to the Library UI as a query that fixes its own title if changed. Mark the mobile root on Firefox/Fennec as special so Weave uses "mobile" for the guid in the record, and items will appear in the appropriate folder.
--HG--
extra : rebase_source : fbd3afa2647204a370f7dacdf9d824e462ebb9b9

--- a/source/chrome/content/notification.css
+++ b/source/chrome/content/notification.css
@@ -1,3 +1,7 @@
+treechildren::-moz-tree-image(container, OrganizerQuery_MobileBookmarks) {
+  list-style-image: url(chrome://weave/skin/mobile-icon.png);
+}
+
 #openRemoteTabs-button {
   list-style-image: url(chrome://weave/skin/weave-default-64.png);
 }
